<resources>
    <string name="app_name">Konnect</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="register">Register</string>
    <string name="next">Next</string>
    <string name="password_type_requirements">Password must contain 1 uppercase letter(A–Z), 1 lowercase letter(a–z), 1 special character(@,#,$), 1 number(0–9).</string>
    <string name="password_length_requirements">Password length must be at least 6.</string>
    <string name="upload_image">Upload</string>
    <string name="sign_up_prompt">Don\'t have an account?</string>
    <string name="write_something">Write something about yourself…</string>
    <string name="logout">Log out</string>
    <string name="terms_and_conditions">Terms and conditions</string>
    <string name="feedback">Feedback</string>
    <string name="contact_me">Contact me</string>
    <string name="share">Share</string>
    <string name="user_name">Username</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="users">Users</string>
    <string name="communities">Communities</string>
    <string name="community">Community</string>
    <string name="profile">Profile</string>
    <string name="menu">Menu</string>
    <string name="back">Back</string>
    <string name="or_use">OR USE</string>
    <string name="phone">Phone</string>
    <string name="phone_number">+8801978243409</string>
    <string name="call_now">Call now</string>
    <string name="email_me">Email me</string>
    <string name="email_address">zunaied4821@gmail.com</string>
    <string name="facebook">Facebook</string>
    <string name="instagram">Instagram</string>
    <string name="twitter">Twitter</string>
    <string name="linkedin">Linkedin</string>
    <string name="github">Github</string>
    <string name="thank_you_for_sharing">Thank you for sharing</string>
    <string name="share_your_feedback">Share your feedback</string>
    <string name="feedback_hint">Enter your feedback</string>
    <string name="send">Send</string>
    <string name="icon_account_circle_content_description">Account Circle Logo</string>
    <string name="konnect_background_content_description">Konnect Background</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="post_owner_username">username</string>
    <string name="post_owner_email">email</string>
    <string name="date">Date</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="create">Create</string>
    <string name="choose_type">Choose Type</string>
    <string name="choose_subkonnect">Choose Subkonnect</string>
    <string name="subkonnect">Subkonnect</string>
    <string name="post">Post</string>
    <string-array name="create_types">
        <item>Subkonnect</item>
        <item>Post</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="clear">Clear</string>
    <string name="comments">Comments</string>
    <string name="image">Image</string>
    <string name="upvote">Upvote</string>
    <string name="downvote">Downvote</string>
    <string name="join">Join</string>
    <string name="account_settings">ACCOUNT SETTINGS</string>
    <string name="delete_account">DELETE ACCOUNT</string>
    <string name="edit_profile">EDIT PROFILE</string>
    <string name="change_password">CHANGE PASSWORD</string>
    <string name="change_email">CHANGE EMAIL</string>
    <string name="update_password">UPDATE PASSWORD</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="confirm_new_password">Confirm password</string>
    <string name="posts">Posts</string>
    <string name="subkonnects">Subkonnects</string>
    <string name="members_">Members:</string>
    <string name="comment_section">Comment Section</string>
    <string name="replies">Replies</string>
    <string name="comment">Comment</string>
    <string name="zero">0</string>
    <string name="show_replies">Show replies</string>
    <string name="submit">Submit</string>
    <string name="add_reply">Add reply</string>
    <string name="members">Members</string>
    <string name="choose_avatar">Choose Avatar</string>
    <string name="avatar">Avatar</string>
    <string name="old_email">Old email</string>
    <string name="new_email">New email</string>
    <string name="verify_email">VERIFY EMAIL</string>
    <string name="verified">VERIFIED</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="follow">FOLLOW</string>
    <string name="follow_back">FOLLOW BACK</string>
    <string name="unfollow">UNFOLLOW</string>
    <string name="chat">Chat</string>
    <string name="linkedin_profile">LinkedIn Profile</string>
    <string name="votes">Votes:</string>
    <string name="posts_">Posts:</string>
    <string name="followers_">Followers:</string>
    <string name="followings_">Followings:</string>
    <string name="type_message">Type the message…</string>
    <string name="update">Update</string>
    <string name="tech_news">Tech News</string>
    <string name="content">content</string>
    <string name="feedbacks">Feedbacks</string>
    <string name="cancel">Cancel</string>
    <string name="bio">Bio</string>
    <string name="leave">Leave</string>
    <string name="owner">Owner</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="or">OR</string>
</resources>