<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/icon_round_home_black_24"
        android:title="@string/home" />
    <item
        android:id="@+id/nav_users"
        android:icon="@drawable/icon_round_person_black_24"
        android:title="@string/users" />
    <item
        android:id="@+id/nav_create"
        android:icon="@drawable/icon_add_black_24"
        android:title="@string/create" />
    <item
        android:id="@+id/nav_communities"
        android:icon="@drawable/icon_round_people_black_24"
        android:title="@string/community" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/icon_round_info_black_24"
        android:title="@string/profile" />
</menu>