<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ContactMeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:background="@color/blue"
            android:src="@drawable/contact_us" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/acme"
            android:text="@string/contact_me"
            android:textColor="@color/black"
            android:textSize="32sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="10dp"
            android:background="@color/black" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="20dp"
            android:background="@color/primary_mid"
            android:columnCount="2"
            android:rowCount="2">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_rowWeight="1"
                android:layout_columnWeight="5"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="start"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/acme"
                    android:text="@string/phone"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <View
                    android:layout_width="200dp"
                    android:layout_height="1dp"
                    android:background="#50000000" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/acme"
                    android:text="@string/phone_number"
                    android:textColor="@color/black"
                    android:textSize="20sp" />
            </LinearLayout>

            <ImageButton
                android:id="@+id/call_button"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:layout_margin="10dp"
                android:backgroundTint="@color/primary"
                android:contentDescription="@string/call_now"
                android:src="@drawable/icon_round_phone_black_24" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_rowWeight="1"
                android:layout_columnWeight="5"
                android:layout_marginTop="10dp"
                android:gravity="start"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/acme"
                    android:text="@string/email"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="200dp"
                    android:layout_height="1dp"
                    android:layout_marginBottom="5dp"
                    android:background="#50000000" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/acme"
                    android:text="@string/email_address"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
            </LinearLayout>

            <ImageButton
                android:id="@+id/email_button"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:layout_margin="10dp"
                android:backgroundTint="@color/primary"
                android:contentDescription="@string/email_me"
                android:src="@drawable/icon_email_black_24" />
        </GridLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_margin="10dp"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/acme"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="@string/or_use"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_margin="10dp"
            android:background="@color/primary_light"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:id="@+id/facebook_image"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="15dp"
                android:contentDescription="@string/facebook"
                android:src="@drawable/icon_facebook" />

            <ImageView
                android:id="@+id/instagram_image"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="15dp"
                android:contentDescription="@string/instagram"
                android:src="@drawable/icon_instagram" />

            <ImageView
                android:id="@+id/twitter_image"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="15dp"
                android:contentDescription="@string/twitter"
                android:src="@drawable/icon_twitter" />

            <ImageView
                android:id="@+id/linkedin_image"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="15dp"
                android:contentDescription="@string/linkedin"
                android:src="@drawable/icon_linkedin" />

            <ImageView
                android:id="@+id/github_image"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="15dp"
                android:contentDescription="@string/github"
                android:src="@drawable/icon_github" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>