<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".SignUpActivity">

    <TextView
        android:id="@+id/sign_up_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/acme"
        android:gravity="center"
        android:text="@string/sign_up"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:textStyle="bold" />

    <View
        android:id="@+id/sign_up_bar"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:layout_below="@id/sign_up_title"
        android:background="@color/black" />

    <EditText
        android:id="@+id/user_username_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/acme"
        android:layout_below="@+id/sign_up_bar"
        android:layout_marginTop="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@color/primary_mid"
        android:drawableStart="@drawable/icon_person_black_24"
        android:drawablePadding="20dp"
        android:hint="@string/user_name"
        android:inputType="text"
        android:padding="20dp"
        android:focusable="true"
        android:clickable="true"
        android:textColor="@color/black"
        android:textColorHint="@color/transparent_black"
        android:textSize="18sp"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/user_email_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/acme"
        android:layout_below="@id/user_username_input"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@color/primary_mid"
        android:drawableStart="@drawable/icon_email_black_24"
        android:drawablePadding="20dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="20dp"
        android:focusable="true"
        android:clickable="true"
        android:textColor="@color/black"
        android:textColorHint="@color/transparent_black"
        android:textSize="18sp"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/user_password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/acme"
        android:layout_below="@id/user_email_input"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@color/primary_mid"
        android:drawableStart="@drawable/icon_key_black_24"
        android:drawablePadding="20dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="20dp"
        android:focusable="true"
        android:clickable="true"
        android:textColor="@color/black"
        android:textColorHint="@color/transparent_black"
        android:textSize="18sp"
        tools:ignore="Autofill" />

    <TextView
        android:id="@+id/user_password_type_requirements"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:fontFamily="@font/acme"
        android:layout_below="@id/user_password_input"
        android:text="@string/password_type_requirements"
        android:textColor="@color/transparent_black"
        android:visibility="visible" />

    <TextView
        android:id="@+id/user_password_length_requirements"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:fontFamily="@font/acme"
        android:layout_below="@id/user_password_type_requirements"
        android:text="@string/password_length_requirements"
        android:textColor="@color/transparent_black"
        android:visibility="visible" />

    <EditText
        android:id="@+id/user_confirm_password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/acme"
        android:layout_below="@id/user_password_length_requirements"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@color/primary_mid"
        android:drawableStart="@drawable/icon_key_black_24"
        android:drawablePadding="20dp"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:padding="20dp"
        android:focusable="true"
        android:clickable="true"
        android:textColor="@color/black"
        android:textColorHint="@color/transparent_black"
        android:textSize="18sp"
        tools:ignore="Autofill" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="80dp"
        android:backgroundTint="@color/primary"
        android:fontFamily="@font/acme"
        android:text="@string/next"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:cornerRadius="0dp" />
</RelativeLayout>
