<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".SubKonnectActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sub_konnect_join_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/acme"
        android:layout_margin="10dp"
        android:text="@string/join"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:background="@color/blue"
        android:visibility="gone" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sub_konnect_leave_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/acme"
        android:layout_margin="10dp"
        android:text="@string/leave"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:background="@color/transparent_red"
        android:visibility="gone" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/acme"
        android:gravity="center"
        android:text="@string/owner"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black" />

    <LinearLayout
        android:id="@+id/sub_konnect_owner_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/dent_effect_selector"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:backgroundTint="@color/card_background"
            app:cardCornerRadius="22dp"
            app:cardElevation="0dp">

            <ImageView
                android:id="@+id/sub_konnect_owner_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/icon_account_circle_black_100" />
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/sub_konnect_owner_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/acme"
                android:text="@string/post_owner_username"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/sub_konnect_owner_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/acme"
                android:text="@string/post_owner_email"
                android:textColor="@color/transparent_black"
                android:textSize="13sp" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/acme"
        android:gravity="center"
        android:text="@string/members"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="5dp"
        android:background="@color/black" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_members"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary_mid"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/acme"
        android:gravity="center"
        android:text="@string/posts"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="20sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="5dp"
        android:background="@color/black" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_posts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary_mid"
        android:padding="5dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp" />
</LinearLayout>