<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rectangular_corner_box"
    android:backgroundTint="@color/primary"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/sub_konnect_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/acme"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/title"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/join_sub_konnect_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/acme"
                android:clickable="true"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:backgroundTint="@color/blue"
                android:textColor="@color/black"
                android:text="@string/join"
                android:visibility="gone" />

            <Button
                android:id="@+id/leave_sub_konnect_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/acme"
                android:clickable="true"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:backgroundTint="@color/transparent_red"
                android:textColor="@color/black"
                android:text="@string/leave"
                android:visibility="gone" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="10dp"
            android:background="@color/transparent_black" />

        <TextView
            android:id="@+id/sub_konnect_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/acme"
            android:gravity="start"
            android:text="@string/description"
            android:textColor="@color/transparent_black"
            android:textSize="15sp" />
    </LinearLayout>
</LinearLayout>